@@ -7,7 +7,10 @@
 elgg_pop_breadcrumb();
 elgg_push_breadcrumb(elgg_echo("groups"));
 
-elgg_register_title_button();
+// only register title button if allowed
+if ((elgg_get_plugin_setting("limited_groups", "groups") != "yes") || elgg_is_admin_logged_in()) {
+	elgg_register_title_button();
+}
 
 $selected_tab = get_input("filter");
 
