@@ -8,7 +8,10 @@ gatekeeper();
 // for consistency with other tabs
 elgg_push_breadcrumb(elgg_echo("groups"));
 
-elgg_register_title_button();
+// only register title button if allowed
+if ((elgg_get_plugin_setting("limited_groups", "groups") != "yes") || elgg_is_admin_logged_in()) {
+	elgg_register_title_button();
+}
 
 $selected_tab = "suggested";
 
