@@ -6,6 +6,7 @@ x.x:
 - fixed: layout issue in plugin settings
 - fixed: you can no join groups you were invited for on the group profile page
 - fixed: misleading translation for a group cleanup setting (#22)
+- fixed: create group button showing up on some pages when setting was disabled (#35)
 
 2.8 (2013-10-31):
 
